Update education and major information in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <ul>
         <li>Age: 19</li>
         <li>Location: Washington, U.S.</li>
-        <li>Education: College (Sophmore)</li>
+        <li>Education: College (Junior) at University of Washington (Tacoma)</li>
+        <li>Major: Computer Science & Systems</li>
     </ul>
     <p>I like computers and technology in general, but especially the software side. I enjoy coding, video games (particularly in VR), and photography. Some of my favorite movies are <a href="https://www.imdb.com/title/tt0338013/">Eternal Sunshine of the Spotless Mind (2004)</a>, <a href="https://www.imdb.com/title/tt0390384/">Primer (2004)</a>, and <a href="https://www.imdb.com/title/tt0477348/">No Country For Old Men (2007)</a>.</p>
     <h2>Skills:</h2>
